[tool.poetry]
name = "tf-keras-random-seed"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/tf-keras-random-seed"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b1"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
